[package]
name = "one"
version = "0.1.0"
authors = ["Linus Gasser <ineiti@gasser.blue>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
two = {path = "../two"}
wasm-bindgen = "0.2"
rand = ""
getrandom = { version = "0.2", features = ["js"] }
